--- a/gateway/kubernetes/deployment.yml
+++ b/gateway/kubernetes/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: username/gateway:latest
+          image: dongeunkim/gateway:v29239213
           ports:
             - containerPort: 8080
