--- a/Delivery/kubernetes/deployment.yaml
+++ b/Delivery/kubernetes/deployment.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
         - name: Delivery
-          image: username/Delivery:latest
+          image: dongeunkim/delivery:v29239213
           ports:
             - containerPort: 8080
           readinessProbe:
             httpGet:
               path: '/actuator/health'
               port: 8080
-            initialDelaySeconds: 10
+            initialDelaySeconds: 30
             timeoutSeconds: 2
             periodSeconds: 5
             failureThreshold: 10
