--- a/custommerCenter/kubernetes/service.yaml
+++ b/custommerCenter/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: custommerCenter
+  name: custommercenter
   labels:
-    app: custommerCenter
+    app: custommercenter
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: custommerCenter
+    app: custommercenter
